feat: 키워드 수정 테스트 추가